# chimed

./: .gitignore  README.md  setup.cfg  setup.py
.reuse/: dep5
lib/systemd/user/: chimed.service
lib/vim/: vimrc
src/chimed/: __init__.py  __main__.py  bell.py  chime.py  cli.py  config.py  daemon.py  subcommands.py  utils.py
src/chimed/_data/: defaults.toml
